--- a/Edmond_Madriaga.html
+++ b/Edmond_Madriaga.html
@@ -218,7 +218,7 @@
             border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
-        @media (max-width: 725px) {
+        @media (max-width: 100%) {
             .image-box img {
                 margin-left: -10px; /* Shift images slightly left for mobile */
             }
