--- a/Edmond_Madriaga.html
+++ b/Edmond_Madriaga.html
@@ -211,14 +211,14 @@
         }
         .image-box {
             width: 100%;
-            margin-top: 10px;
+            margin-top: 5px;
         }
         .image-box img {
             width: 100%;
-            border-radius: 10    px;
+            border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
-        @media (max-width: 100%) {
+        @media (max-width: 768px) {
             .container {
                 flex-direction: column;
                 align-items: center;
