--- a/Rogelio_Malazarte_Jr..html
+++ b/Rogelio_Malazarte_Jr..html
@@ -6,50 +6,243 @@
     <title>Euroexim Team</title>
     <style>
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url('images/Logo.png') no-repeat center center fixed;
-            background-size: cover;
+            position: relative;
             text-align: center;
         }
-        .container {
+
+        /* Create a pseudo-element for the background with reduced opacity */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
-            max-width: 420px;
+            height: 100%;
+            background: url('images/Logo.png') no-repeat center center/cover;
+            opacity: 0.15; /* Adjust this value for more/less transparency */
+            z-index: -1;
+        }   
+
+
+        .key {
+            font-size: 10vw;
+            display: inline-block;
+            letter-spacing: -1vw;
+            transition: transform 0.2s;
+        }
+
+
+
+        @keyframes pressDown1 {
+            30%,
+            40%,
+            100% {
+                transform: translateY(0);
+        }
+        35% {
+            transform: translateY(10px);
+        }
+        }
+
+        @keyframes pressDown2 {
+            70%,
+            80%,
+            100% {
+                transform: translateY(0);
+        }
+        75% {
+            transform: translateY(10px);
+        }
+        }
+
+        @keyframes pressDown3 {
+            30%,
+            40%,
+            100% {
+                transform: translateY(0);
+        }
+        35% {
+            transform: translateY(10px);
+        }
+        }
+
+        @keyframes pressDown4 {
+            40%,
+            50%,
+            100% {
+                transform: translateY(0);
+        }
+        45% {
+            transform: translateY(10px);
+        }
+        }
+
+        @keyframes pressDown5 {
+            20%,
+            30%,
+            100% {
+                transform: translateY(0);
+        }
+        25% {
+            transform: translateY(10px);
+        }
+        }
+
+        @keyframes pressDown6 {
+            60%,
+            70%,
+            100% {
+                transform: translateY(0);
+        }
+        65% {
+            transform: translateY(10px);
+        }
+        }
+
+        @keyframes pressDown7 {
+            10%,
+            20%,
+            100% {
+                transform: translateY(0);
+        }
+        15% {
+            transform: translateY(10px);
+        }
+        }
+
+        @keyframes pressDown8 {
+            35%,
+            45%,
+            100% {
+                transform: translateY(0);
+        }
+        40% {
+            transform: translateY(10px);
+        }
+        }
+
+
+
+        .key:nth-child(1) {
+            animation: pressDown1 2s infinite;
+        }
+
+        .key:nth-child(2) {
+            animation: pressDown2 3s infinite;
+        }
+
+        .key:nth-child(3) {
+            animation: pressDown3 4s infinite;
+        }
+
+        .key:nth-child(4) {
+            animation: pressDown4 2.5s infinite;
+        }
+
+        .key:nth-child(5) {
+            animation: pressDown5 2.5s infinite;
+        }
+
+        .key:nth-child(6) {
+            animation: pressDown6 3.5s infinite;
+        }
+
+        .key:nth-child(7) {
+            animation: pressDown7 2.2s infinite;
+        }
+
+        .key:nth-child(8) {
+            animation: pressDown8 3.2s infinite;
+        }
+
+
+
+
+        /* extra stuff */
+        .jux-linx {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            gap: 10px;
+            position: absolute;
+            left: 20px;
+            bottom: 20px;
+        }
+        a {
+            text-decoration: none;
+            font-family: "IBM Plex Sans", sans-serif;
+            font-weight: 400;
+            font-size: 16px;
+            color: white;
+            background-color: black;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 2px;
+            padding: 5px 10px;
+            transition: 0.1s all ease-in;
+        }
+
+        a:nth-child(1):hover {
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            box-shadow: 0px 2px 0 #349eff;
+        }
+
+        a:nth-child(2):hover {
+            border: 1px solid rgba(255, 255, 255, 0.4);
+            box-shadow: 0px 2px 0 #ff5757;
+        }
+        .container {
+            width: 90%;
+            max-width: 400px;
             margin: auto;
             padding: 20px;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 10px;
-            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
         }
         .header {
-            background: linear-gradient(135deg, #3b5998, #1c4e80);
-            color: white;
-            padding: 20px;
-            font-size: 26px;
+            color: #cda536;
+            font-size: clamp(20px, 8vw, 40px);
             font-weight: bold;
-            border-bottom-left-radius: 15px;
-            border-bottom-right-radius: 15px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+            padding: 15px;
+            display: flex;
+            justify-content: center;
+            gap: 5px;
         }
         .image-box {
             width: 100%;
-            margin-top: 15px;
+            margin-top: 10px;
         }
         .image-box img {
             width: 100%;
-            border-radius: 12px;
-            box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.15);
-            transition: transform 0.3s ease-in-out;
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
         }
-        .image-box img:hover {
-            transform: scale(1.03);
+        @media (max-width: 768px) {
+            .header {
+                flex-wrap: wrap;
+                gap: 2px;
+            }
+            .container {
+                padding: 10px;
+            }
         }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">Euroexim Team</div>
+    <div class="header">
+        <span class="key">E</span>
+        <span class="key">U</span>
+        <span class="key">R</span>
+        <span class="key">O</span>
+        <span class="key">E</span>
+        <span class="key">X</span>
+        <span class="key">I</span>
+        <span class="key">M</span>
+    </div>
     <div class="container">
         <div class="image-box">
             <img src="images/Rogelio Malazarte Jr/1.png" alt="Euroexim Business Card">
