--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script>
   window.onload = () => {
     window.ui = SwaggerUIBundle({
-      url: 'openapi.yaml',
+      url: 'new.yml',
       dom_id: '#swagger-ui',
     });
   };
